setuped main page

--- a/Alicargo/index.html
+++ b/Alicargo/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <!-- <link rel="icon" sizes="16x16 32x32" type="image/png" href="favicon.png">
@@ -28,7 +28,7 @@
                         <a href="#advantages" class="btn btn-nav">Преимущества</a>
                         <a href="#world" class="btn btn-nav">Контакты</a>
                         <a href="tel:88005558523" class="tel h3">8 800 555 8523</a>
-                        <span class="lang">
+                        <!--<span class="lang">
                             <span class="for-active-lang a">
                                 <span class="rus flag-item a"></span>
                                 <span class="arrow-mini"></span>
@@ -37,7 +37,7 @@
                                 <span class="eng flag-item a"></span>
                                 <span class="ita flag-item a"></span>
                             </span>
-                        </span>
+                        </span>-->
                     </nav>
                 </div>
             </header>
@@ -274,7 +274,7 @@
                     а также официальные представительства в Москве и Санкт-Петербурге</p>
                 <div id="map_canvas" class="margin-from-line"></div>
             </section>
-            <section class="application content with-padding-top">
+            <!--<section class="application content with-padding-top">
                 <div class="page">
                     <h2 class="title">Оставьте заявку</h2>
                     <form class="form margin-from-line">
@@ -297,7 +297,7 @@
                         <button type="submit" class="btn btn-blue">Отправить</button>
                     </form>
                 </div>
-            </section>
+            </section>-->
             <div class="clear"></div>
             <div class="push"></div>
         </section>
@@ -311,7 +311,7 @@
                                 <img src="images/logo-ely.png" alt="logo footer" />
                                 <h3 class="text-for-footer-logo">Avion
                                     <br /> Russia</h3>
-                                <a href="http://alicargo.ru/Authentication/Login" class="h2">login</a>
+								<a href="http://avionrussia.com/authentication/login" class="h2">login</a>
                             </div>
 
                             <div class="clear"></div>
@@ -330,7 +330,7 @@
                                 <p class="p-uppercase-blue">E-mail</p>
                                 <a href="mailto:avion@avionrussia.com">avion@avionrussia.com</a>
                             </div>
-                            <div class="text-block">
+                            <!--<div class="text-block">
                                 <a href="#" target="_blanc" class="block-cargo icon-social clothes">
                                     <span class="icon-cargo icon-insta"></span>
                                 </a>
@@ -343,7 +343,7 @@
                                 <a href="#" target="_blanc" class="block-cargo icon-social clothes">
                                     <span class="icon-cargo icon-vk"></span>
                                 </a>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                     <div class="clear"></div>
