fixed main page styles

--- a/Alicargo/index.html
+++ b/Alicargo/index.html
@@ -6,11 +6,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Avion</title>
-        <link href="css/swiper.css" type="text/css" rel="stylesheet">
-        <link rel="stylesheet" href="css/pushy.css">
-        <link href="css/app.css" type="text/css" rel="stylesheet">
+		<link href="Content/css/swiper.css" type="text/css" rel="stylesheet">
+		<link rel="stylesheet" href="Content/css/pushy.css">
+		<link href="Content/css/app.css" type="text/css" rel="stylesheet">
         <!--[if lt IE 9]>
-			<script src="js/modernizr.js" type="text/javascript"></script>
+			<script src="Scripts/js/modernizr.js" type="text/javascript"></script>
 		<![endif]-->
     </head>
     <body>
@@ -27,7 +27,8 @@
                         <a href="#time-delivery" class="btn btn-nav">Способы и сроки</a>
                         <a href="#advantages" class="btn btn-nav">Преимущества</a>
                         <a href="#world" class="btn btn-nav">Контакты</a>
-                        <a href="tel:88005558523" class="tel h3">8 800 555 8523</a>
+	                    <a href="tel:88005558523" class="tel h3">8 800 555 8523</a>
+						<a href="/authentication/login" class="btn btn-nav">Вход</a>
                         <!--<span class="lang">
                             <span class="for-active-lang a">
                                 <span class="rus flag-item a"></span>
@@ -180,42 +181,42 @@
                 <div class="page">
                     <h2 class="title">Нам доверяют</h2>
                     <div class="grid margin-from-line">
-                        <img src="images/logos/ann.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/armani.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/blumarine.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/cantarelli.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/casadei.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/commedes.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/costume.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/dkny.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/dolce.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/dries.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/emillio.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/etro.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/fendi.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/furla.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/gf-ferre.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/cesare.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/gucci.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/giuseppe.gif" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/guess.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/lang.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/hogan.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/sander.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/mm.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/marella.gif" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/max.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/maxmara.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/missoni.jpeg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/miu.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/morch.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/paul.gif" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/prada.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/parosh.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/roberto.png" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/versace.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/yves.jpg" alt="доверились нам" class="item-grid trust-item" />
-                        <img src="images/logos/westwood.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/ann.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/armani.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/blumarine.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/cantarelli.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/casadei.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/commedes.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/costume.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/dkny.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/dolce.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/dries.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/emillio.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/etro.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/fendi.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/furla.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/gf-ferre.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/cesare.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/gucci.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/giuseppe.gif" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/guess.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/lang.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/hogan.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/sander.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/mm.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/marella.gif" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/max.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/maxmara.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/missoni.jpeg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/miu.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/morch.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/paul.gif" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/prada.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/parosh.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/roberto.png" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/versace.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/yves.jpg" alt="доверились нам" class="item-grid trust-item" />
+						<img src="Content/images/logos/westwood.jpg" alt="доверились нам" class="item-grid trust-item" />
                     </div>
                 </div>
             </section>
@@ -308,10 +309,10 @@
                     <div class="contacts-item">
                         <div class="contacts-item-left">
                             <div class="footer-logo">
-                                <img src="images/logo-ely.png" alt="logo footer" />
+								<img src="Content/images/logo-ely.png" alt="logo footer" />
                                 <h3 class="text-for-footer-logo">Avion
                                     <br /> Russia</h3>
-								<a href="http://avionrussia.com/authentication/login" class="h2">login</a>
+								<a href="/authentication/login" class="h2">login</a>
                             </div>
 
                             <div class="clear"></div>
@@ -358,14 +359,14 @@
                 </div>
             </div>
         </footer>
-        <script src="js/jquery.js"></script>
-        <script src="js/swiper.min.js"></script>
-        <script src="js/imagesloaded.js"></script>
-        <script src="js/isotope.min.js"></script>
+		<script src="Scripts/js/jquery.js"></script>
+		<script src="Scripts/js/swiper.min.js"></script>
+		<script src="Scripts/js/imagesloaded.js"></script>
+		<script src="Scripts/js/isotope.min.js"></script>
         <script src="http://maps.googleapis.com/maps/api/js"> </script>
-        <script src="js/pushy.min.js"></script>
-        <script src="js/map.js"></script>
-        <script src="js/script.js"></script>
+		<script src="Scripts/js/pushy.min.js"></script>
+		<script src="Scripts/js/map.js"></script>
+		<script src="Scripts/js/script.js"></script>
         <script>
         $(document).ready(function() {
             var swiper = new Swiper('.swiper-container',
