--- a/Alicargo/index.html
+++ b/Alicargo/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-        <!-- <link rel="icon" sizes="16x16 32x32" type="image/png" href="favicon.png">
-		<link rel="shortcut icon" sizes="16x16 32x32" type="image/x-icon" href="favicon.ico"> -->
+        <!-- <link rel="icon" sizes="16x16 32x32" type="image/png" href="favicon.png">-->
+		<link rel="shortcut icon" sizes="16x16 32x32" type="image/x-icon" href="favicon.ico">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Avion</title>
@@ -28,7 +28,7 @@
                         <a href="#advantages" class="btn btn-nav">Преимущества</a>
                         <a href="#world" class="btn btn-nav">Контакты</a>
 	                    <a href="tel:88005558523" class="tel h3">8 800 555 8523</a>
-						<a href="/authentication/login" class="btn btn-nav">Вход</a>
+						<a href="http://login.avionrussia.com" class="btn btn-nav">Вход</a>
                         <!--<span class="lang">
                             <span class="for-active-lang a">
                                 <span class="rus flag-item a"></span>
