added feedback form and action

--- a/Alicargo/index.html
+++ b/Alicargo/index.html
@@ -275,30 +275,30 @@
                     а также официальные представительства в Москве и Санкт-Петербурге</p>
                 <div id="map_canvas" class="margin-from-line"></div>
             </section>
-            <!--<section class="application content with-padding-top">
+            <section class="application content with-padding-top">
                 <div class="page">
                     <h2 class="title">Оставьте заявку</h2>
-                    <form class="form margin-from-line">
+                    <form class="form margin-from-line" action="/Home/Feedback">
                         <span class="form-col form-col-left">
                             <p class="p-uppercase-blue">Контакты фабрики</p>
-                            <input type="text" class="input" placeholder="Название" />
-                            <input type="text" class="input" placeholder="Телефон" />
-                            <input type="text" class="input" placeholder="E-mail" />
-                            <input type="text" class="input" placeholder="Контактное лицо" />
+                            <input type="text" class="input" name="FactoryName" placeholder="Название" />
+							<input type="text" class="input" name="FactoryPhone" placeholder="Телефон" />
+							<input type="text" class="input" name="FactoryEmail" placeholder="E-mail" />
+							<input type="text" class="input" name="FactoryContact" placeholder="Контактное лицо" />
                         </span>
                         <span class="form-col form-col-right">
                             <p class="p-uppercase-blue">Ваши контакты</p>
-                            <input type="text" class="input" placeholder="Ваше имя*" />
-                            <input type="text" class="input" placeholder="Телефон*" />
-                            <input type="text" class="input" placeholder="E-mail" />
-                            <input type="text" class="input" placeholder="Удобное время для звонка" />
+							<input type="text" class="input" name="UserName" placeholder="Ваше имя*" />
+							<input type="text" class="input" name="UserPhone" placeholder="Телефон*" />
+                            <input type="text" class="input" name="UserEmail" placeholder="E-mail" />
+                            <input type="text" class="input" name="UserCallTime" placeholder="Удобное время для звонка" />
                         </span>
                         <span class="clear"></span>
-                        <textarea type="text" class="textarea" placeholder="Ваш комментарий"></textarea>
+                        <textarea type="text" class="textarea" name="Comment" placeholder="Ваш комментарий"></textarea>
                         <button type="submit" class="btn btn-blue">Отправить</button>
                     </form>
                 </div>
-            </section>-->
+            </section>
             <div class="clear"></div>
             <div class="push"></div>
         </section>
