added feedback processing
Related Work Items: #376

--- a/Alicargo/index.html
+++ b/Alicargo/index.html
@@ -278,7 +278,7 @@
             <section class="application content with-padding-top">
                 <div class="page">
                     <h2 class="title">Оставьте заявку</h2>
-                    <form class="form margin-from-line" action="/Home/Feedback">
+                    <form class="form margin-from-line" action="/Home/Feedback" method="POST">
                         <span class="form-col form-col-left">
                             <p class="p-uppercase-blue">Контакты фабрики</p>
                             <input type="text" class="input" name="FactoryName" placeholder="Название" />
