--- a/Alicargo/index.html
+++ b/Alicargo/index.html
@@ -352,7 +352,7 @@
             </div>
             <div class="super-footer">
                 <div class="page">
-                    <p class="pull-left">© 2015 Avian Russia</p>
+                    <p class="pull-left">© 2015 Avion Russia</p>
                     <span class="arrow-to-top btn"></span>
                     <a href="http://www.softformula.com/" target="_blanc" class='softformula pull-right'></a>
                     <div class="clear"></div>
